Fix checkbox on ie

--- a/src/components/PropertiesNetwork/styles.css
+++ b/src/components/PropertiesNetwork/styles.css
@@ -19,9 +19,11 @@
 }
 
 .checkbox input[type=checkbox] {
-  width: initial;
+  width: inherit;
   position: absolute;
   margin-left: -20px;
   margin-top: 2px;
+  box-sizing: border-box;
+  padding: 0;
 }
 
